--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,43 @@
-# Starter pipeline
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# .NET Desktop
+# Build and run tests for .NET Desktop or Windows classic desktop solutions.
+# Add steps that publish symbols, save build artifacts, and more:
+# [Link removed to avoid odd formatting.]
 
 trigger:
-- main
+- master
 
 pool:
-  vmImage: ubuntu-latest
+  name: 'Default'
+
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: NuGetToolInstaller@0
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '$(solution)'
+
+- task: VSBuild@1
+  inputs:
+    solution: '$(solution)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: VSTest@2
+  inputs:
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: VSBuild@1
+  displayName: 'Build solution (debug)'
+  inputs:
+    solution: '$(solution)'
+    vsVersion: 16.0
+    platform: x86
+    configuration: Debug
+    clean: true
+  timeoutInMinutes: 10
